--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "apexcharts": "^3.33.1",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
